fix: correct visibility of export dropdown

--- a/website/static/sass/widgets.sass
+++ b/website/static/sass/widgets.sass
@@ -150,4 +150,8 @@ select.form-control
   float: right
 
 .panel-heading
+  height: 55px
+
+.collapse-me .panel-heading
   overflow: hidden
+  height: auto
